GNOME Bugzilla – Bug 669167
vorbisparse drops certain data buffers on the floor mistakenly thinking they're headers
Last modified: 2012-02-02 20:56:38 UTC
gst-launch-0.10 filesrc location=... ! oggdemux ! vorbisparse ! fakesink One file leaks one buffer. Another file leaks 707 buffers (ouch). The number of leaked buffers is the same per file. Filing so I don't forget to fix.
Created attachment 206578 [details] [review] vorbisparse: fix header detection It was matching non header packets. This fixes various leaks, where buffers would be pushed onto a headers list, but never popped. Might also fix corruption as those buffers were dropped from the output silently...
Pushed: commit b647c627e4ad54cec2c1058e1264ef4239665e6d Author: Vincent Penquerc'h <vincent.penquerch@collabora.co.uk> Date: Wed Feb 1 16:46:13 2012 +0000 vorbisparse: pedantically recognize undefined headers too commit 809546c324b86fbfe37de8ce5543d03d2206a2f2 Author: Vincent Penquerc'h <vincent.penquerch@collabora.co.uk> Date: Wed Feb 1 16:32:24 2012 +0000 vorbisparse: fix header detection It was matching non header packets. This fixes various leaks, where buffers would be pushed onto a headers list, but never popped. Might also fix corruption as those buffers were dropped from the output silently... https://bugzilla.gnome.org/show_bug.cgi?id=669167
cherry-picked this into the release branch, so -> 0.10.36